--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "js-cookie": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-google-login": "^5.2.2",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.2",
     "react-responsive-carousel": "^3.2.11",
