--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.25.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "express-fileupload": "^1.2.1",
+    "googleapis": "^67.1.1",
     "jest-worker": "^26.6.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.15",
     "multer": "^1.4.2",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.5.0",
     "react-responsive-carousel": "^3.2.11",
     "typescript": "^4.0.5"
   },
