--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
     "redux-thunk": "github:reduxjs/redux-thunk#master",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
