--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "googleapis": "^67.1.1",
     "jest-worker": "^26.6.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.15",
+    "mailgun-js": "^0.22.0",
+    "mongoose": "^5.12.3",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
