--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.1.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
