--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "node-fetch": "^2.6.1",
     "nodemailer": "^6.5.0",
+    "socket.io": "^4.1.1",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
