--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react-google-login": "^5.2.2",
     "react-medium-image-zoom": "^4.3.3",
     "react-paypal-button-v2": "^2.6.2",
+    "react-process-string": "^1.2.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
