--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^12.1.10",
     "eslint": "^7.13.0",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
+    "node-schedule": "^2.0.0",
     "react": "^17.0.1",
     "react-chat-window": "^1.2.1",
     "react-dom": "^17.0.1",
