--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-scroll": "^1.8.2",
+    "react-scrollable-feed": "^1.3.1",
     "react-slick": "^0.28.1",
     "react-speech-recognition": "^3.8.0",
     "redux": "^4.0.5",
